--- a/assets/style.css
+++ b/assets/style.css
@@ -29,7 +29,7 @@ body {
 
 .navmenu__principal {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     padding-top: 3vh;
 }
 
@@ -280,7 +280,7 @@ footer p {
 
     .flex__nav {
         display: flex;
-        justify-content:space-around;
+        justify-content:center;
         flex-wrap: wrap;
         background-color: green;
         padding: 10px;
