--- a/assets/style.css
+++ b/assets/style.css
@@ -6,6 +6,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=ZCOOL+QingKe+HuangYou&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Smooch+Sans:wght@500;600;700&display=swap');
+
 :root {
     --corazuldomenu:#000015;
     --verdedahide: green;
@@ -86,6 +88,7 @@ body {
 main {
     font-family: 'Rubik', sans-serif;
     padding-top: 50px;
+    
 }
 
 .main__total h2 {
@@ -298,4 +301,76 @@ footer p {
         margin: 20px 0px;
     }
   
+}
+
+
+
+
+
+/*CSS PAGINA DE CONSERTO DE TELAS =======================================================================================================================================================================================================================================*/
+
+.main-tabelacell {
+    background-color: var(--corazuldomenu);
+}
+
+
+
+
+.tabelacell {
+    position: relative;
+    background-color: #fff;
+    margin: 0 auto;
+    border-collapse: collapse;
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px rgba(255, 255, 255, 0.604);
+}
+
+.tabelacell>thead>tr>th {
+    position: sticky;
+    top: -1px;
+    background-color: #fff;
+}
+
+
+.tabelacell td {
+    border: 1px solid black;
+    padding: 20px;
+    font-size: 1.3em;
+}
+
+.tabelacell th {
+    border: 1px solid black;
+    padding: 10px;
+    font-size: 1.3em;
+}
+
+tr:nth-child(even) {
+    background-color: lightgray;
+}
+
+.tabelacell th {
+    color: var(--corazuldomenu);
+    font-weight: bold;
+    font-size: 2em;
+    text-shadow: 1px 1px 3px black;
+}
+
+.tabela_de_celulares article {
+    margin-bottom: 50px;
+}
+
+.tabela_de_celulares article>h2 {
+    font-family: 'Smooch Sans', sans-serif;
+    text-align: center;
+    color: white;
+    font-size: 3em;
+}
+
+
+.tabela_de_celulares article>p {
+    font-family: 'Smooch Sans', sans-serif;
+    text-align: center;
+    font-weight: 500;
+    font-size: 2em;
+    color: white;
 }
