--- a/assets/style.css
+++ b/assets/style.css
@@ -257,7 +257,7 @@ footer p {
 /*MEDIA QUERIES*/
 
 
-@media screen and (max-width: 2500px) {
+@media screen and (max-width: 400px) {
       
     .o-header {
         padding-bottom: 100px;
@@ -301,6 +301,24 @@ footer p {
         margin: 20px 0px;
     }
   
+}
+
+@media screen and(max-width:400px) {
+        /*TABELA DE CELL*/
+
+        .tabelacell td {
+            border: 1px solid black;
+            font-size: 1em;
+        }
+        
+        .tabelacell th {
+            border: 1px solid black;
+            font-size: 1.0em;
+        }
+
+        .tabelacell img {
+            width: 300px;
+        }
 }
 
 
