--- a/assets/style.css
+++ b/assets/style.css
@@ -332,7 +332,7 @@ footer p {
 }
 
 .tabelacell {
-    width: 300px;
+    max-width: 600px;
     position: relative;
     background-color: #fff;
     margin: 0 auto;
@@ -399,11 +399,5 @@ tr:nth-child(even) {
     tr:nth-child(even) {
         background-color: var(--corazuldomenu);
         color: #fff;
-    }
-}
-
-@media only screen and(min-width: 600px) {
-    .tabelacell {
-        width: 700px;
     }
 }
