--- a/assets/style.css
+++ b/assets/style.css
@@ -19,14 +19,13 @@
 
 body {
     font-family: 'Rubik', sans-serif;
-    background-color: #ebebeb;
+    background-color: var(--corazuldomenu);
 }
 
 .o-header {
     background-color: var(--corazuldomenu);
     height: 10vh;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.487);
-    border-bottom: none;
+    border-bottom: 1px solid white;
 }
 
 .navmenu__principal {
@@ -87,8 +86,7 @@ body {
 
 main {
     font-family: 'Rubik', sans-serif;
-    padding-top: 50px;
-    
+    padding-top: 50px;    
 }
 
 .main__total h2 {
@@ -97,7 +95,7 @@ main {
     background-color: #fff;
     text-align: center;
     font-size: 2em;
-    box-shadow: -2px 2px 5px 5px rgba(255, 255, 255, 0.439);
+    box-shadow: -2px 2px 10px  rgba(255, 255, 255, 0.439);
     font-weight: bold;
 } 
 
@@ -106,8 +104,13 @@ main {
     max-width: 1440px;
     margin: 0 auto;
     background-color: var(--corazuldomenu);
-    box-shadow: 2px 2px 10px black;
-   
+    box-shadow: 0px 1px 10px rgba(89, 89, 89, 0.248);
+    transition: 1s; 
+}
+
+.main__total:hover {
+    transition: 1s;
+    box-shadow: 0px 1px 50px 3px rgba(255, 255, 255, 0.234);
 }
 
 .banner__main {
@@ -261,6 +264,7 @@ footer p {
     .o-header {
         padding-bottom: 100px;
         height: 120px;
+        
     }
 
     .navmenu__principal {
