--- a/assets/style.css
+++ b/assets/style.css
@@ -178,15 +178,29 @@ main {
     padding-top: 50px;  
 }
 
+.o-section2>h3 {
+    font-family: 'Smooch Sans', sans-serif;
+    color: #FF6A08;
+    font-weight: bold;
+    font-size: 3em;
+    text-align: center;
+    padding-bottom: 20px;
+}
+
+.aqui {
+    text-decoration: underline;
+}
+
 img.bannerxiaomi {
     width: 100%;
-    height: 150px;
+    
     padding-bottom: 50px;
 }
 
 .celularesxiaomi {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    
 }
 
 .celularesxiaomi li {
@@ -195,6 +209,7 @@ img.bannerxiaomi {
     padding-bottom: 50px;
     opacity: 1;
     transition: 1s;
+    border-radius: 5px 30px 5px 30px;
 }
 
 .celularesxiaomi li:hover {
