--- a/assets/style.css
+++ b/assets/style.css
@@ -36,12 +36,13 @@ body {
     justify-content: center;
 }
 
+
+/*Carrosel da motinha*/
 @keyframes mymove {
     from {left: 0px;}
     to {left: 1250px;}
     from {top: -60px;}
     to {top: -60px;}
-   
   }
 
 #carrosel{
@@ -53,7 +54,7 @@ body {
     vertical-align: center;
     font-weight: bold;
     position: relative;
-    animation: mymove 8s 2;
+    animation: mymove 8s infinite;
     padding-bottom: 20px;
     padding: 20px;
   }
@@ -61,6 +62,18 @@ body {
   #carrosel img {
       width: 150px;
   }
+
+  @media online screen and(max-width:600px) {
+    @keyframes mymove {
+        from {left: -10px;}
+        to {left: 300px;}
+        from {top: -60px;}
+        to {top: -60px;}
+      }
+  }
+
+
+  /*Acaba o carrosel da motinha*/
 
 .navmenu__principal h1>a {
     color: var(--verdedahide);
@@ -409,8 +422,15 @@ footer p {
     background-color: #fff;
     margin: 0 auto;
     border-collapse: collapse;
-    border-radius: 10px;
+    
     box-shadow: 2px 2px 10px rgba(255, 255, 255, 0.604);
+    transition: 1s;
+    margin-bottom: 20px;
+}
+
+.tabelacell:hover {
+    box-shadow: 0px 1px 20px 8px rgba(153, 151, 151, 0.816);
+    transition: 1s;
 }
 
 .tabelacell img {
@@ -438,6 +458,17 @@ footer p {
 
 tr:nth-child(even) {
     background-color: lightgray;
+    transition: 1s;
+}
+
+tr:nth-child(even):hover {
+    background-color: rgb(100, 99, 99);
+    transition: 1s;
+}
+
+tr:nth-child(odd):hover {
+    background-color: rgba(193, 232, 196, 0.981);
+    transition: 1s;
 }
 
 .tabelacell th {
@@ -473,3 +504,57 @@ tr:nth-child(even) {
         color: #fff;
     }
 }
+
+
+
+/*AQUI ACABA AS TABELAS E COMEÇA O SOBRE-ENDEREÇO*/
+
+main.main-sobre {
+    max-width: 1440px ;
+    margin: 0 auto;
+    box-shadow: 0px 1px 10px rgba(89, 89, 89, 0.248);
+    border-radius: 0px 0px 10px 10px;
+    transition: 1s;
+    margin-bottom: 50px;
+}
+
+main.main-sobre:hover {
+    box-shadow: 0px 1px 50px 3px rgba(255, 255, 255, 0.234);
+    transition: 1s;
+}
+
+.main-sobre h2 {
+    text-align: center;
+    color: white;
+    font-weight: bold;
+    font-family: 'Smooch Sans', sans-serif;
+    font-size: 5em;
+    
+}
+
+.main-sobre p {
+    text-align: justify;
+    color: white;
+    font-family: 'Rubik', sans-serif;
+    font-size: 1.2em;
+    padding: 20px;
+    font-weight: 300;
+    line-height: 40px;
+    text-indent: 50px;
+    
+}
+
+div.iframe-mapa {
+    position: relative;
+    margin: 0 auto;
+    width: 100%;
+    margin-bottom: 350px;
+}
+
+div.iframe-mapa>iframe {
+    margin: 0 auto;
+    position: absolute;
+    left: 24%;
+    width: 50%;
+}
+
