--- a/assets/style.css
+++ b/assets/style.css
@@ -54,7 +54,7 @@ body {
     vertical-align: center;
     font-weight: bold;
     position: relative;
-    animation: mymove 8s infinite;
+    animation: mymove 8s 1;
     padding-bottom: 20px;
     padding: 20px;
   }
