--- a/assets/style.css
+++ b/assets/style.css
@@ -682,6 +682,7 @@ div.divpreco2>p {
     height: 130px;
     border-radius: 10px;
     box-shadow: 0px 0px 10px black;
+
 }
 
 .divdescriptionxiaomi h3 {
@@ -703,6 +704,10 @@ div.divpreco2>p {
     margin: 10px auto;
     border-radius:10px;
     box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.548);
+}
+
+.section-aparelhos-xiaomi>div:hover {
+    box-shadow: 0px 0px 15px 10px rgba(255, 255, 255, 0.419);
 }
 
 
@@ -738,4 +743,89 @@ div.divpreco2>p {
     margin-top: 5px;
     font-size: 20px;
     padding: 5px;
+}
+
+
+/*COMEÇA PAGINA  DE DESCRIÇÃO DOS CELULARES*/
+
+#section-divisao-flex {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    max-width: 1440px;
+    margin: auto;
+    box-shadow: 0px 0px 50px 2px rgba(255, 255, 255, 0.213);
+    margin-bottom: 50px;  
+    border-radius: 10px;  
+}
+
+div#imagem-celular {
+    display: flex;
+    margin-left: 20px;
+    margin-top: 20px;
+    
+    
+}
+
+div#texto-celular {
+    box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.076);
+    width: 940px;
+    height: 590px;
+    margin-top: 20px;
+    padding: 20px;
+}
+
+
+div#texto-celular h2 {
+    text-align: center;
+    color: white;
+    font-size: 2.5em;
+}
+
+div#texto-celular p {
+    text-indent: 20px;
+    color: #f2efec;
+    font-size: 1.5em;
+    text-align: justify;
+    padding: 10px;
+    font-weight: normal;
+}
+
+div#galeria-de-fotos-cell {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    width: 1440px;
+    margin-top: 180px;
+    transition: 2s;
+    
+}
+
+div#galeria-de-fotos-cell img {
+    width: 250px;
+    height: 300px;
+    margin: 10px;
+    padding: 10px;
+    transition: 2s;
+}
+
+div#galeria-de-fotos-cell img:hover {
+    width: 350px;
+    height: 450px;
+    transition: 1s;
+}
+
+div#video-demonstrativo {
+    margin: 0px -20px 30px -20px;
+    padding: 20px;
+    margin-top: 50px;
+    position: relative;
+}
+
+div#video-demonstrativo>iframe {
+    position: absolute;
+    top: 5%;
+    left: 25%;
+    width: 50%;
 }
